--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "kris/laravel-form-builder": "^1.16",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-activitylog": "^3.2",
         "spatie/laravel-permission": "^2.29"
     },
     "require-dev": {
